--- a/src/app/ShoppingList/shopping-list/shopping-list.component.html
+++ b/src/app/ShoppingList/shopping-list/shopping-list.component.html
@@ -1,1 +1,5 @@
-<p>shopping-list works!</p>
+<div class="row me-1">
+  <div class="col-12 text-center bg-success">
+    <h3>Shopping List</h3>
+  </div>
+</div>
