--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mb-5 sticky-top">
   <div class="col-12 bg-warning">
     <h1 class="text-center">HEADER</h1>
   </div>
