--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
 <div class="container">
   <app-header></app-header>
+  <div class="row">
+    <div class="col-6">
+      <app-shopping-list></app-shopping-list>
+    </div>
+    <div class="col-6">
+      <app-recipe-list></app-recipe-list>
+    </div>
+  </div>
 </div>
 
