--- a/src/app/RecipeBook/recipe-list/recipe-list.component.html
+++ b/src/app/RecipeBook/recipe-list/recipe-list.component.html
@@ -1,5 +1,5 @@
-<div class="row ms-1">
-  <div class="col-12 bg-danger text-center">
-    <h3>Recipe Book</h3>
-  </div>
+<div class="bg-danger p-1 mb-3">
+  <h3>Recipe Book.</h3>
 </div>
+
+
