--- a/src/app/ShoppingList/shopping-list/shopping-list.component.html
+++ b/src/app/ShoppingList/shopping-list/shopping-list.component.html
@@ -1,5 +1,3 @@
-<div class="row me-1">
-  <div class="col-12 text-center bg-success">
-    <h3>Shopping List</h3>
-  </div>
+<div class="bg-success p-1 mb-3">
+  <h3>Shopping List.</h3>
 </div>
