--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,15 @@
-<div class="container">
+<div class="container p-0">
   <app-header></app-header>
   <div class="row">
     <div class="col-6">
-      <app-shopping-list></app-shopping-list>
+      <div class="row">
+        <div class="col-12">
+          <app-shopping-list></app-shopping-list>
+        </div>
+        <div class="col-12">
+          <app-shopping-list-edit></app-shopping-list-edit>
+        </div>
+      </div>
     </div>
     <div class="col-6">
       <app-recipe-list></app-recipe-list>
