--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,14 @@
       </div>
     </div>
     <div class="col-6">
-      <app-recipe-list></app-recipe-list>
+      <div class="row">
+        <div class="col-12">
+          <app-recipe-list></app-recipe-list>
+        </div>
+        <div class="col-12">
+          <app-recipe-item></app-recipe-item>
+        </div>
+      </div>
     </div>
   </div>
 </div>
