--- a/src/app/RecipeBook/recipe-detail/recipe-detail.component.html
+++ b/src/app/RecipeBook/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,3 @@
-<p>recipe-detail works!</p>
+<div ngClass="text-center p-1" [ngStyle]="{backgroundColor: 'burlywood'}">
+  <h3>Recipe Detail</h3>
+</div>
