--- a/src/app/RecipeBook/recipe-list/recipe-list.component.html
+++ b/src/app/RecipeBook/recipe-list/recipe-list.component.html
@@ -1,5 +1,5 @@
-<div class="bg-danger p-1 mb-3">
-  <h3>Recipe Book.</h3>
+<div class="bg-danger p-1 mb-3 text-center">
+  <h3>Recipe List.</h3>
 </div>
 
 
