--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
         <div class="col-12">
           <app-recipe-item></app-recipe-item>
         </div>
+        <div ngClass="col-12">
+          <app-recipe-detail></app-recipe-detail>
+        </div>
       </div>
     </div>
   </div>
