--- a/src/app/RecipeBook/recipe-item/recipe-item.component.html
+++ b/src/app/RecipeBook/recipe-item/recipe-item.component.html
@@ -1,3 +1,3 @@
-<div [ngStyle]="{backgroundColor: 'lightseagreen'}" ngClass="text-center p-1">
+<div [ngStyle]="{backgroundColor: 'lightseagreen'}" ngClass="text-center p-1 mb-3">
   <h3>Recipe Item</h3>
 </div>
