--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="https://www.afarmgirlsdabbles.com/wp-content/uploads/2021/06/cucumber-salad-afarmgirlsdabbles_07s.jpg" alt="property bind recipe here.">
+    <img src="https://www.afarmgirlsdabbles.com/wp-content/uploads/2021/06/cucumber-salad-afarmgirlsdabbles_07s.jpg" alt="property bind recipe here." class="img-responsive">
   </div>
 </div>
 <div class="row">
