--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,12 @@
-<p>recipe-item works!</p>
+<a
+  href="#"
+  class="list-group-item clearfix">
+  <div class="pull-left">
+    <h5 class="listgroup-item-heading">{{ recipe.name }}.</h5>
+    <p class="list-group-item-text">{{ recipe.description }} </p>
+  </div>
+  <span class="pull-right">
+    <img [src]="recipe.imagePath" [alt]="recipe.description" class="img-circle img-responsive" style="max-height: 50px;" />
+  </span>
+</a>
+
