--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -4,18 +4,10 @@
   </div>
 </div>
 <hr />
-<div class="row" *ngFor="let recipe of recipes">
+<div class="row">
   <div class="col-xs-12 bg-danger" [ngStyle]="{padding: '1%'}">
-    <a href="#" class="list-group-item clearfix">
-      <div class="pull-left">
-        <h5 class="listgroup-item-heading">{{ recipe.name }}.</h5>
-        <p class="list-group-item-text">{{ recipe.description }} </p>
-      </div>
-      <span class="pull-right">
-        <img [src]="recipe.imagePath" [alt]="recipe.description" class="img-circle img-responsive" style="max-height: 50px;" />
-      </span>
-    </a>
-    <app-recipe-item></app-recipe-item>
-  </div>
+      <app-recipe-item *ngFor="let item of recipes" [recipe] = item>
+      </app-recipe-item>
+    </div>
 </div>
 
