passed from grandchild to parent.

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
 <a
   href="#"
-  class="list-group-item clearfix">
+  class="list-group-item clearfix" (click)="emitRecipe(recipe)">
   <div class="pull-left">
     <h5 class="listgroup-item-heading">{{ recipe.name }}.</h5>
     <p class="list-group-item-text">{{ recipe.description }} </p>
