--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,32 +1,34 @@
-<div class="row">
-  <div class="col-xs-12">
-    <img src="https://www.afarmgirlsdabbles.com/wp-content/uploads/2021/06/cucumber-salad-afarmgirlsdabbles_07s.jpg" alt="property bind recipe here." class="img-responsive">
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <h3>Name.</h3>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <div class="btn-group">
-      <button type="button" class="btn btn-danger dropdown-toggle">Manage Recipe <span class="caret"></span></button>
-      <ul class="dropdown-menu">
-        <li><a href="#">Add To List.</a></li>
-        <li><a href="#">Edit Recipe.</a></li>
-        <li><a href="#">Delete Recipe.</a></li>
-      </ul>
+<div *ngIf="receivedFromRecipeComponent" >
+    <div class="row">
+      <div class="col-xs-12">
+        <img src="{{receivedFromRecipeComponent.imagePath}}" alt="property bind recipe here." class="img-responsive">
+      </div>
     </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    Description.
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    Ingredients.
-  </div>
+    <div class="row">
+      <div class="col-xs-12">
+        <h3>{{receivedFromRecipeComponent.name}}</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="btn-group">
+          <button type="button" class="btn btn-danger dropdown-toggle">Manage Recipe <span class="caret"></span></button>
+          <ul class="dropdown-menu">
+            <li><a href="#">Add To List.</a></li>
+            <li><a href="#">Edit Recipe.</a></li>
+            <li><a href="#">Delete Recipe.</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        {{receivedFromRecipeComponent.description}}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        Ingredients.
+      </div>
+    </div>
 </div>
