--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,12 +1,12 @@
-<div *ngIf="receivedFromRecipeComponent" >
+<div>
     <div class="row">
       <div class="col-xs-12">
-        <img src="{{receivedFromRecipeComponent.imagePath}}" alt="property bind recipe here." class="img-responsive">
+        <img [src]="recipe.imagePath" alt="property bind recipe here." class="img-responsive">
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12">
-        <h3>{{receivedFromRecipeComponent.name}}</h3>
+        <h3>{{recipe.name}} </h3>
       </div>
     </div>
     <div class="row">
@@ -23,7 +23,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12">
-        {{receivedFromRecipeComponent.description}}
+        <h5>{{recipe.description}} </h5>
       </div>
     </div>
     <div class="row">
