--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,6 +3,10 @@
     <app-recipe-list (recipeWasSelected)="selectedRecipe = $event"></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail *ngIf="selectedRecipe; else infoText" [recipe] = 'selectedRecipe'></app-recipe-detail>
+
+    <ng-template #infoText>
+      <h5>Please select a recipe so that you may view its details here.</h5>
+    </ng-template>
   </div>
 </div>
