--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -6,14 +6,14 @@
     </div>
     <div class="row">
       <div class="col-xs-12">
-        <h3>{{recipe.name}} </h3>
+        <h3>{{recipe.name}}.</h3>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12">
-        <div class="btn-group">
+        <div class="btn-group" appDropdown> <!-- open class here after btn-group -->
           <button type="button" class="btn btn-danger dropdown-toggle">Manage Recipe <span class="caret"></span></button>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu" >
             <li><a href="#">Add To List.</a></li>
             <li><a href="#">Edit Recipe.</a></li>
             <li><a href="#">Delete Recipe.</a></li>
