--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -2,8 +2,8 @@
   href="#"
   class="list-group-item clearfix" (click)="onSelected()">
   <div class="pull-left">
-    <h5 class="listgroup-item-heading">{{ recipe.name }}.</h5>
-    <p class="list-group-item-text">{{ recipe.description }} </p>
+    <h5 class="listgroup-item-heading">Name: {{ recipe.name }}.</h5>
+    <p class="list-group-item-text">Description: {{ recipe.description }} </p>
   </div>
   <span class="pull-right">
     <img [src]="recipe.imagePath" [alt]="recipe.description" class="img-circle img-responsive" style="max-height: 50px;" />
