--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -14,7 +14,7 @@
         <div class="btn-group" appDropdown> <!-- open class here after btn-group -->
           <button type="button" class="btn btn-danger dropdown-toggle">Manage Recipe <span class="caret"></span></button>
           <ul class="dropdown-menu" >
-            <li><a href="#">Add To List.</a></li>
+            <li><a href="#" (click)="addToList()" >Add To List.</a></li>
             <li><a href="#">Edit Recipe.</a></li>
             <li><a href="#">Delete Recipe.</a></li>
           </ul>
@@ -30,7 +30,7 @@
       <div class="col-xs-12">
         <!-- Ingredients. -->
         <ul class="list-group">
-          <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">{{ingredient.name}} - {{ingredient.amount}}.</li>
+          <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients"><span [ngStyle]="{color: 'crimson', fontWeight: 'bolder'}">{{ingredient.name}}</span> - {{ingredient.amount}}.</li>
         </ul>
       </div>
     </div>
